some changes in chat

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-MONGODB_URI=mongodb://localhost:27017/creative_project
+MONGODB_URI=mongodb+srv://launchsphere:swapnil@cluster0.j5tdwls.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+old=mongodb://localhost:27017/creative_project
